@@ -1,7 +1,11 @@
 2025.01.16 v1.1.0
-! ccActive will now be cleared on player deactivation or death
+
+! ccActive will now be cleared on player death
 ! - Deprecated - ! ccCache will now be properly accessed and cleared 
 ! Changed the way tracking works for more accurate results
+ + Introduced activeEffects with subeffects
+ + Added status checks for immunity to immobilization and being alive
+ + Stuns are now being removed when changing zone
 + Abilities wrongly declared as roots will now be filtered and ignored in the future when looking for roots
 + Roots that are incorrectly detected as snares will now be added to a personal list in SV so they will be correctly detected as roots in the future (feel free to post your list of additional roots in the [url=https://www.esoui.com/downloads/info3988-barnysCCTracker-beta.html#comments]comment section[/url])
 + Stuns, fears and charms will now be removed automaticly if break free was detected
